--- a/web/css/lecture/style.css
+++ b/web/css/lecture/style.css
@@ -5,12 +5,11 @@
     padding: 0;
 }
 
-h1, h2, h3, h4, h5, h6, a, p, label {
+h1, h2, h3, h4, h5, h6, a, p, li, label {
     font-family: 'Noto Sans JP', sans-serif;
 }
 
 body {
-    /* background-color: #edf4fa; */
     background-color: #f5f5f5;
 }
 
@@ -52,10 +51,15 @@ main {
 
 main h1 {
     font-weight: 500;
-    font-size: 28px;
+    font-size: 25px;
+    color: #485c64;
     padding-bottom: 5px;
-    margin-top: 25px;
+    margin-top: 60px;
     border-bottom: 4px solid #edf4fa;
+}
+
+#heading1 {
+    margin-top: 25px;
 }
 
 .heading_border {
@@ -63,16 +67,32 @@ main h1 {
 }
 
 .text_box {
-    margin: 25px 0;
+    margin: 25px 0 40px 0;
+}
+
+main h3 {
+    color: #485c64;
+}
+
+.sub_heading {
+    width: fit-content;
+    margin-bottom: 10px;
+    padding-left: 10px;
+    border-left: 3px solid #76a8ff;
+}
+
+main h4 {
+    color: #485c64;
 }
 
 main p {
-    font-size: 15px;
-    letter-spacing: 2px;
+    font-size: 14px;
+    letter-spacing: 1px;
     line-height: 29px;
     font-weight: 400;
-    color: #2a2a2a;
+    color: #485c64;
 }
+
 
 .bold {
     font-weight: bold;
@@ -95,7 +115,8 @@ iframe {
 pre {
     width: auto;
     padding: 10px 15px;
-    margin: 20px 0;
+    margin: 15px 0;
+    color: #485c64;
     background: #f6f6f6;
     border: 2px solid #e6e6e6;
     box-sizing: border-box;
@@ -105,9 +126,13 @@ pre {
     line-height: 1.5;
 }
 
+pre span {
+    font-size: 14px;
+}
+
 /*全体*/
 .hidden_box {
-    margin: 20px 0;
+    margin: 8px 0;
     padding: 0;
     font-family: 'Noto Sans JP', sans-serif;
 }
@@ -115,7 +140,8 @@ pre {
 /*ボタン装飾*/
 .hidden_box label {
     color: #9e9e9e;
-    font-weight: bold;
+    font-size: 14px;
+    font-weight: 500;
     cursor :pointer;
     /* 範囲選択できないようにする */
     -webkit-user-select: none;
@@ -124,6 +150,7 @@ pre {
 
 /*ボタンホバー時*/
 .hidden_box label:hover {
+    size: 14px;
     color: #c0c0c0;
 }
 
@@ -149,12 +176,16 @@ pre {
     height: auto;
     opacity: 1;
     margin: 10px 0 30px 0;
-    padding: 10px 15px;
+    padding: 0 15px 10px 15px;
+}
+
+.hidden_show pre {
+    margin-top: 0;
 }
 
 .glossary {
-    margin: 10px 0 40px 0;
-    padding: 10px 15px;
+    margin-bottom: 40px;
+    padding: 0 15px 10px 15px;
     border-left: 4px solid #83e0b9;
 }
 
@@ -170,6 +201,10 @@ pre {
 
 .glossary .text_box {
     margin: 15px 0 30px 0;
+}
+
+.glossary .last_box {
+    margin-bottom: 0;
 }
 
 .glossary .text_box h4 {
@@ -217,6 +252,16 @@ pre {
 
 .tips_box h3 {
     padding-top: 4px;
+    color: #84ccc4;
+}
+
+.tips_box li, .caution_box li {
+    font-size: 14px;
+    color: #485c64;
+    letter-spacing: 1px;
+    line-height: 29px;
+    text-indent: -1em;
+    padding-left: 1em;
 }
 
 .caution_box {
@@ -248,6 +293,7 @@ pre {
 
 .caution_box h3 {
     padding-top: 4px;
+    color: #ffd865;
 }
 
 aside {
@@ -280,18 +326,57 @@ aside {
 #widget a {
     cursor :pointer;
     text-decoration: none;
-    color: #424242;
+    color: #485c64;
 }
 
 #widget a:hover {
     border-bottom: 1px solid black;
 }
 
+#widget .list_indent {
+    margin-left: 10px;
+    padding: 2px 0;
+}
+
+#widget .list_indent a {
+    color: #b3b8b9;
+}
+
+#widget .list_indent a:hover {
+    color: #485c64;
+}
+
 #side_menu{
     font-weight: 600;
+    color: #485c64;
     margin-bottom: 10px;
     padding-bottom: 5px;
     border-bottom: 2px solid #edf4fa;
+}
+
+.git_link {
+    padding: 6px 10px;
+    margin: 10px 0;
+    width: fit-content;
+    border-radius: 10px;
+    cursor: pointer;
+    background-color: #485c64;
+}
+
+.git_link:hover {
+    background-color: #6a8691;
+}
+
+.git_link a {
+    font-size: 12px;
+    text-decoration: none;
+    color: white;
+}
+
+.git_link svg {
+    width: 20px;
+    fill: white;
+    vertical-align: middle;
 }
 
 /* タブレットよりも小さな画面 */
@@ -327,7 +412,20 @@ aside {
         font-size: 21px;
     }
 
-    main p {
-        font-size: 14px;
+    .sub_heading {
+        font-size: 17px;
+        margin-bottom: 10px;
+        padding-left: 10px;
     }
+
+    main p {
+        font-size: 12px;
+        line-height: 23px;
+    }
+
+    .tips_box li, .caution_box li {
+        font-size: 12px;
+        line-height: 23px;
+    }
+    
 }
