--- a/web/css/toppage/main_visual.css
+++ b/web/css/toppage/main_visual.css
@@ -1,32 +1,19 @@
 @charset "utf-8";
 
-* {
-    margin: 0;
-    padding: 0;
-    font-family: 'Noto Sans JP', sans-serif;
-}
-
-span {
-    display: inline-block;  /* 改行しない */
-}
-
 #main_visual {
     background-color: #e8f2fb;
-    padding-bottom: 20px;
+    display: flex;
+    color: #1a448f;
     /* 範囲選択できないようにする */
     user-select: none;
     -webkit-user-select: none;
 }
 
-#visual_flex {
-    display: flex;
-}
-
 #visual_title {
     width: fit-content;
+    height: fit-content;
     margin: auto;
     margin-right: 0;
-    color: #1a448f;
 }
 
 .large_title {
@@ -40,6 +27,7 @@ span {
 }
 
 .catchphrase {
+    width: fit-content;
     padding-top: 15px;
 }
 
@@ -53,43 +41,12 @@ span {
     width: 400px;
 }
 
-main {
-    margin: 30px 0;
-    padding: 60px 60px;
-}
-
-main h1{
-    font-size: 35px;
-    color: #1a448f;
-    margin-bottom: 10px;
-}
-
-main p {
-    font-size: 15px;
-    letter-spacing: 1px;
-    line-height: 29px;
-    font-weight: 400;
-    color: #2a2a2a;
-}
-
-.article_flex {
-    display: flex;
-}
-
-.img_box {
-    position: relative;
-    width: 100%;
-    margin: auto 0;
-    width: fit-content;
-}
-
-.img_box img{
-    width: 500px;
-    z-index: 40;
-}
-
-.article_flex section {
-    margin-left: 60px;
+.bottom_wave {
+    position: absolute;
+    z-index: -1;
+    /* 範囲選択できないようにする */
+    user-select: none;
+    -webkit-user-select: none;
 }
 
 /* タブレットよりも小さな画面 */
@@ -113,13 +70,13 @@ main p {
 
 /* スマホよりも小さな画面 */
 @media screen and (max-width: 760px) {
-    #visual_flex {
-        display: block;
-    }
 
     #visual_title {
-        margin: 0 auto;
-        margin-top: 30px;
+        margin-left: 20px;
+        position: absolute;
+        z-index: 100;
+        /* margin: 0 auto; */
+        /* margin-top: 30px; */
     }
     
     .large_title {
@@ -131,46 +88,17 @@ main p {
     }
 
     #visual_img {
+        opacity: 0.5;
+    }
+
+    /* #visual_img {
         margin: 0 5% 0 auto;
     }
     
     #main_visual svg {
         width: 200px;
         padding-top: 15px;
-    }
-
-    main {
-        padding: 10px 20px;
-    }
-
-    main h1 {
-        font-size: 30px;
-    }
-    
-    main p {
-        font-size: 15px;
-    }
-
-    .article_flex {
-        display: block;
-    }
-
-    #article1 {
-        margin: 90px 0;
-    }
-
-    .img_box {
-        width: 100%;
-        margin: 0 0 10px 0;
-    }
-
-    .img_box img{
-        width: 100%;
-    }
-
-    .article_flex section {
-        margin-left: 0;
-    }
+    } */
 }
 
 /* iphone8よりも小さな画面 */
