main_visual以外仮完成

--- a/web/css/toppage/info_table.css
+++ b/web/css/toppage/info_table.css
@@ -34,22 +34,14 @@
 
 /* タブレットよりも小さな画面 */
 @media screen and (max-width: 960px) {
-    
+    #info_table {
+        min-width: 100%;
+    }
 }
 
 /* スマホよりも小さな画面 */
 @media screen and (max-width: 760px) {
     #info_table {
-        min-width: auto;
+        width: 100%;
     }
-
-    /* #info_table th,
-    #info_table td {
-        display: block;
-        padding: 9px;
-    }
-
-    #info_table th {
-        text-align: left;
-    } */
 }
