--- a/web/css/toppage/article/article5.css
+++ b/web/css/toppage/article/article5.css
@@ -48,5 +48,11 @@
 
 /* スマホよりも小さな画面 */
 @media screen and (max-width: 760px) {
-
+    .swiper-button-prev {
+        display: none;
+    }
+    
+    .swiper-button-next {
+        display: none;
+    }
 }
