--- a/web/css/footer.css
+++ b/web/css/footer.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 
 footer {
-    /* background: #f1f1f1; */
+    font-family: 'Noto Sans JP', sans-serif;
     background-color: white;
     max-width: 100%;
     margin: 0;
