--- a/web/css/lecture/style.css
+++ b/web/css/lecture/style.css
@@ -1,5 +1,12 @@
 @charset "utf-8";
 
+@import url("./hidden_box.css");
+@import url("./column.css");
+@import url("./tips_box.css");
+@import url("./caution_box.css");
+@import url("./side_menu.css");
+@import url("./iframe.css");
+
 * {
     margin: 0;
     padding: 0;
@@ -13,22 +20,10 @@ body {
     background-color: #f5f5f5;
 }
 
-main img {
-    width: 100%;
-    margin: 10px 0 15px 0;
-    border: 1px solid #e9e9e9;
-    border-radius: 6px;
-}
-
-#main_visual {
-    display: block;
-    text-align: center;
-}
-
-#main_visual h1 {
-    width: fit-content;
-    margin: 0 auto;
-    padding: 70px 30px 0 30px;
+.no-select {
+    /* 範囲選択できないようにする */
+    -webkit-user-select: none;
+    user-select: none;
 }
 
 #wrapper {
@@ -36,6 +31,12 @@ main img {
     margin: 80px auto;
     padding: 0 35px;
     justify-content: center;    /* 要素を中央に揃える */
+}
+
+#main_visual h1 {
+    width: fit-content;
+    margin: 0 auto;
+    padding: 70px 30px 0 30px;
 }
 
 main {
@@ -49,29 +50,50 @@ main {
     box-shadow: 0 0 10px rgba(0,0,0,0.03);
 }
 
+main img {
+    width: 100%;
+    margin: -10px 0 5px 0;
+    border: 1px solid #e9e9e9;
+    border-radius: 6px;
+}
+
+main h1, main h3, main h4, main p, main li, pre{
+    color: #485c64;
+}
+
 main h1 {
     font-weight: 500;
     font-size: 25px;
-    color: #485c64;
     padding-bottom: 5px;
-    margin-top: 60px;
     border-bottom: 4px solid #edf4fa;
 }
 
-#heading1 {
+main p {
+    font-size: 14px;
+    letter-spacing: 1px;
+    line-height: 29px;
+    font-weight: 400;
+}
+
+article {
+    margin-top: 60px;
+}
+
+main section {
+    margin: 20px 0 35px 0;
+}
+
+main section li {
+    font-size: 14px;
+    letter-spacing: 1px;
+    line-height: 29px;
+    text-indent: -1em;
+    padding-left: 1em;
+}
+
+#article1 {
+    /* 第1章の上余白 */
     margin-top: 25px;
-}
-
-.heading_border {
-    margin-bottom: 10px;
-}
-
-.text_box {
-    margin: 25px 0 40px 0;
-}
-
-main h3 {
-    color: #485c64;
 }
 
 .sub_heading {
@@ -81,277 +103,24 @@ main h3 {
     border-left: 3px solid #76a8ff;
 }
 
-main h4 {
-    color: #485c64;
-}
-
-main p {
-    font-size: 14px;
-    letter-spacing: 1px;
-    line-height: 29px;
-    font-weight: 400;
-    color: #485c64;
-}
-
-
 .bold {
     font-weight: bold;
     padding: 0 5px;
-    /* color: #366bce; */
-}
-
-.iframe_box {
-    width: 100%;
-    margin: 40px 0;
-    box-sizing: border-box;
-}
-
-iframe {
-    width: 100%;
-    margin: 0 auto;
-    border-radius: 6px;
 }
 
 pre {
-    width: auto;
     padding: 10px 15px;
     margin: 15px 0;
-    color: #485c64;
     background: #f6f6f6;
     border: 2px solid #e6e6e6;
-    box-sizing: border-box;
     border: 0;
-    overflow-x: auto;
     border-radius: 6px;
+    overflow-x: auto;
     line-height: 1.5;
 }
 
 pre span {
     font-size: 14px;
-}
-
-/*全体*/
-.hidden_box {
-    margin: 8px 0;
-    padding: 0;
-    font-family: 'Noto Sans JP', sans-serif;
-}
-
-/*ボタン装飾*/
-.hidden_box label {
-    color: #9e9e9e;
-    font-size: 14px;
-    font-weight: 500;
-    cursor :pointer;
-    /* 範囲選択できないようにする */
-    -webkit-user-select: none;
-    user-select: none;
-}
-
-/*ボタンホバー時*/
-.hidden_box label:hover {
-    size: 14px;
-    color: #c0c0c0;
-}
-
-.hidden_box i {
-    vertical-align: top;
-}
-
-/*チェックは見えなくする*/
-.hidden_box input {
-    display: none;
-}
-
-/*中身を非表示にしておく*/
-.hidden_box .hidden_show {
-    height: 0;
-    padding: 0;
-    overflow: hidden;
-    opacity: 0;
-}
-
-/*クリックで中身表示*/
-.hidden_box input:checked ~ .hidden_show {
-    height: auto;
-    opacity: 1;
-    margin: 10px 0 30px 0;
-    padding: 0 15px 10px 15px;
-}
-
-.hidden_show pre {
-    margin-top: 0;
-}
-
-.glossary {
-    margin-bottom: 40px;
-    padding: 0 15px 10px 15px;
-    border-left: 4px solid #83e0b9;
-}
-
-.glossary_title {
-    color: #79cca9;
-}
-
-.glossary i {
-    vertical-align: top;
-    padding-top: 2px;
-    padding-right: 10px;
-}
-
-.glossary .text_box {
-    margin: 15px 0 30px 0;
-}
-
-.glossary .last_box {
-    margin-bottom: 0;
-}
-
-.glossary .text_box h4 {
-    padding-bottom: 5px;
-}
-
-.memo_box {
-    background-color: #edf4fa;
-    border-radius: 6px;
-    padding-bottom: 10px;
-}
-
-.memo_title {
-    color: #689dff;
-    padding-bottom: 6px;
-    
-}
-
-.tips_box {
-    position: relative;
-    padding: 13px 15px;
-    margin: 20px 0;
-    border: 2.5px solid #84ccc4;
-    border-radius: 6px;
-}
-
-.tips_title {
-    position: absolute;
-    padding: 0 8px 0 6px;
-    display: flex;
-    background-color: white;
-    color: #84ccc4;
-    top: -20px;
-    left: 5px;
-    border-radius: 6px;
-    /* 範囲選択できないようにする */
-    -webkit-user-select: none;
-    user-select: none;
-}
-
-.tips_box i {
-    padding-top: 6px;
-    padding-right: 3px;
-}
-
-.tips_box h3 {
-    padding-top: 4px;
-    color: #84ccc4;
-}
-
-.tips_box li, .caution_box li {
-    font-size: 14px;
-    color: #485c64;
-    letter-spacing: 1px;
-    line-height: 29px;
-    text-indent: -1em;
-    padding-left: 1em;
-}
-
-.caution_box {
-    position: relative;
-    padding: 13px 15px;
-    margin: 20px 0;
-    border: 2.5px solid #ffd865;
-    border-radius: 6px;
-}
-
-.caution_title {
-    position: absolute;
-    padding: 0 8px 0 6px;
-    display: flex;
-    background-color: white;
-    color: #ffd865;
-    top: -20px;
-    left: 5px;
-    border-radius: 6px;
-    /* 範囲選択できないようにする */
-    -webkit-user-select: none;
-    user-select: none;
-}
-
-.caution_box i {
-    padding-top: 6px;
-    padding-right: 3px;
-}
-
-.caution_box h3 {
-    padding-top: 4px;
-    color: #ffd865;
-}
-
-aside {
-    width: 300px;
-    min-width: 300px;
-    margin: 0 35px;
-}
-
-#widget {
-    height: 500px;
-    position: sticky;    /* スクロール追尾 */
-    top: 15%;
-    padding: 20px;
-    background-color: white;
-    list-style: none;
-    overflow-y: scroll;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.03);
-}
-
-#widget ul {
-    list-style: none;
-}
-
-#widget li {
-    padding: 6px 0;
-    font-size: 13px;
-}
-
-#widget a {
-    cursor :pointer;
-    text-decoration: none;
-    color: #485c64;
-}
-
-#widget a:hover {
-    border-bottom: 1px solid black;
-}
-
-#widget .list_indent {
-    margin-left: 10px;
-    padding: 2px 0;
-}
-
-#widget .list_indent a {
-    color: #b3b8b9;
-}
-
-#widget .list_indent a:hover {
-    color: #485c64;
-}
-
-#side_menu{
-    font-weight: 600;
-    color: #485c64;
-    margin-bottom: 10px;
-    padding-bottom: 5px;
-    border-bottom: 2px solid #edf4fa;
 }
 
 .git_link {
@@ -412,20 +181,19 @@ aside {
         font-size: 21px;
     }
 
+    main p {
+        font-size: 12px;
+        line-height: 23px;
+    }
+
     .sub_heading {
         font-size: 17px;
         margin-bottom: 10px;
         padding-left: 10px;
     }
 
-    main p {
+    main section li {
         font-size: 12px;
         line-height: 23px;
     }
-
-    .tips_box li, .caution_box li {
-        font-size: 12px;
-        line-height: 23px;
-    }
-    
 }
