--- a/web/css/footer.css
+++ b/web/css/footer.css
@@ -5,6 +5,7 @@ footer {
     background-color: white;
     max-width: 100%;
     margin: 0;
+    padding-top: 1px;
     /* 選択できないようにする */
     user-select: none;
     -webkit-user-select: none;
@@ -50,11 +51,11 @@ footer .flex_container {
     padding-top: 35px;
 }
 
-#footer_portal a {
+footer ul li a {
     color: black;
 }
 
-#footer_portal a:hover {
+footer ul li a:hover {
     border-bottom: 1px solid black;
 }
 
